<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:elevation="40dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/divider"
        style="@style/MP.Theme.Widget.Divider.Line.Vertical"
        />

    <LinearLayout
        android:id="@+id/bottom_sheet_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider">
        <android.support.design.widget.TabLayout
            android:id="@+id/library_tablayout"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:tabPaddingTop="5dp"
            app:tabIndicatorColor="@color/transparent"
            app:tabTextAppearance="@style/MyTextAppearanceTablayout"
            app:tabTextColor="@color/grey_light_a"
            app:tabSelectedTextColor="@color/red_dim"
            app:tabMode="fixed"
            app:tabGravity="fill"
            android:elevation="40dp">
            <android.support.design.widget.TabItem
                android:id="@+id/browse_tab"
                android:icon="@drawable/ic_home"
                android:text="@string/browse"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
            <android.support.design.widget.TabItem
                android:id="@+id/songs_tab"
                android:icon="@drawable/library_songs"
                android:text="@string/songs"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
            <android.support.design.widget.TabItem
                android:id="@+id/album_tab"
                android:icon="@drawable/library_album"
                android:text="@string/album"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
            <android.support.design.widget.TabItem
                android:id="@+id/artist_tab"
                android:icon="@drawable/library_artist"
                android:text="@string/artist"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
            <android.support.design.widget.TabItem
                android:id="@+id/playlist_tab"
                android:icon="@drawable/library_playlist"
                android:text="@string/playlist"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>
        </android.support.design.widget.TabLayout>
    </LinearLayout>
</LinearLayout>