<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.AuthActivity">

    <RelativeLayout
        android:id="@+id/account_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:background="@drawable/gradient_danger"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="vertical">
            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true">

            </android.support.v7.widget.Toolbar>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign in"
                android:textSize="28sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="You can sign in to musicbox player if you are a registered user to keep recieving music/app updates and streaming services."
                android:textSize="12sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="2dp"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Learn more."
                android:textSize="10dp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/red_dim"
                />
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="2dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:elevation="20dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="vertical"
                android:weightSum="3">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dip">
            <Button
                android:id="@+id/btn_login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_gradient"
                android:text="@string/btn_login"
                android:textSize="10dp"
                android:textColor="@android:color/black"
                android:layout_alignParentStart="true"/>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_with_google"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/btn_login"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="25dp"
            android:layout_marginTop="5dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textSize="10dp"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <!-- Link to Login Screen -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:background="@drawable/button_gradient"
            android:text="@string/btn_link_to_register"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="10dp" />
    </LinearLayout>


</LinearLayout>